crates/rust-sasl/sasl2-sys/sasl2/include/sasl.h

struct iovec {
    long iov_len;
    char *iov_base;
};
struct iovec;				     
typedef struct sasl_conn sasl_conn_t;
typedef struct sasl_callback {
    unsigned long id;
    int (*proc)(void);   
    void *context;
} sasl_callback_t;
#define SASL_USERNAME     0	
#define SASL_SSF          1	
#define SASL_GETOPTCTX    4	
#define SASL_CALLBACK     7	
#define SASL_IPLOCALPORT  8	
#define SASL_IPREMOTEPORT 9	
#define SASL_PLUGERR     10
#define SASL_DELEGATEDCREDS 11
#define SASL_SERVICE      12	
#define SASL_SERVERFQDN   13	
#define SASL_AUTHSOURCE   14	
#define SASL_APPNAME	  17	
#define	SASL_GSS_PEER_NAME	19
#define	SASL_GSS_LOCAL_NAME	20
typedef struct sasl_channel_binding {
    const char *name;
    int critical;
    unsigned long len;
    const unsigned char *data;
} sasl_channel_binding_t;
#define SASL_CHANNEL_BINDING    21
typedef struct sasl_http_request {
    const char *method;			
    const char *uri;			
    const unsigned char *entity;	
    unsigned long elen;			
    unsigned non_persist;		
} sasl_http_request_t;
#define SASL_HTTP_REQUEST	22
LIBSASL_API int sasl_setprop(sasl_conn_t *conn,
			     int propnum,
			     const void *value);
#define SASL_SSF_EXTERNAL  100	
#define SASL_SEC_PROPS     101	
#define SASL_AUTH_EXTERNAL 102	
LIBSASL_API int sasl_idle(sasl_conn_t *conn);
typedef struct sasl_interact {
    unsigned long id;		
    const char *challenge;	
    const char *prompt;		
    const char *defresult;	
    const void *result;		
    unsigned len;		
} sasl_interact_t;
LIBSASL_API int sasl_client_init(const sasl_callback_t *callbacks);
LIBSASL_API int sasl_client_new(const char *service,
				const char *serverFQDN,
				const char *iplocalport,
				const char *ipremoteport,
				const sasl_callback_t *prompt_supp,
				unsigned flags,
				sasl_conn_t **pconn);
LIBSASL_API int sasl_client_start(sasl_conn_t *conn,
				  const char *mechlist,
				  sasl_interact_t **prompt_need,
				  const char **clientout,
				  unsigned *clientoutlen,
				  const char **mech);
LIBSASL_API int sasl_client_step(sasl_conn_t *conn,
				 const char *serverin,
				 unsigned serverinlen,
				 sasl_interact_t **prompt_need,
				 const char **clientout,
				 unsigned *clientoutlen);
LIBSASL_API int sasl_server_init(const sasl_callback_t *callbacks,
				 const char *appname);
LIBSASL_API int sasl_server_new(const char *service,
				const char *serverFQDN,
				const char *user_realm,
				const char *iplocalport,
				const char *ipremoteport,
				const sasl_callback_t *callbacks,
				unsigned flags,
				sasl_conn_t **pconn);
LIBSASL_API const char ** sasl_global_listmech(void);
LIBSASL_API int sasl_listmech(sasl_conn_t *conn,
			      const char *user,
			      const char *prefix,
			      const char *sep,
			      const char *suffix,
			      const char **result,
			      unsigned *plen,
			      int *pcount);
LIBSASL_API int sasl_server_start(sasl_conn_t *conn,
				  const char *mech,
				  const char *clientin,
				  unsigned clientinlen,
				  const char **serverout,
				  unsigned *serveroutlen);
LIBSASL_API int sasl_server_step(sasl_conn_t *conn,
				 const char *clientin,
				 unsigned clientinlen,
				 const char **serverout,
				 unsigned *serveroutlen);
LIBSASL_API int sasl_checkapop(sasl_conn_t *conn,
			       const char *challenge, unsigned challen,
			       const char *response, unsigned resplen);
LIBSASL_API int sasl_checkpass(sasl_conn_t *conn,
			       const char *user, unsigned userlen,
			       const char *pass, unsigned passlen);
LIBSASL_API int sasl_user_exists(sasl_conn_t *conn,
				 const char *service,
				 const char *user_realm,
				 const char *user);
LIBSASL_API int sasl_setpass(sasl_conn_t *conn,
			     const char *user,
			     const char *pass, unsigned passlen,
			     const char *oldpass, unsigned oldpasslen,
			     unsigned flags);
#define SASL_SET_CREATE  0x01   
#define SASL_SET_DISABLE 0x02	
#define SASL_SET_NOPLAIN 0x04	
#define SASL_SET_CURMECH_ONLY 0x08	
#define SASL_AUX_PASSWORD_PROP "userPassword" 
#define SASL_AUX_PASSWORD "*" SASL_AUX_PASSWORD_PROP 
#define SASL_AUX_UIDNUM   "uidNumber"	
#define SASL_AUX_GIDNUM   "gidNumber"	
#define SASL_AUX_FULLNAME "gecos"	
#define SASL_AUX_HOMEDIR  "homeDirectory" 
#define SASL_AUX_SHELL    "loginShell"	
#define SASL_AUX_MAILADDR "mail"
#define SASL_AUX_UNIXMBX  "mailMessageStore"
#define SASL_AUX_MAILCHAN "mailSMTPSubmitChannel"
LIBSASL_API int sasl_auxprop_request(sasl_conn_t *conn,
				     const char **propnames);
LIBSASL_API struct propctx *sasl_auxprop_getctx(sasl_conn_t *conn);
LIBSASL_API int sasl_auxprop_store(sasl_conn_t *conn,
				   struct propctx *ctx, const char *user);
LIBSASL_API int sasl_encode(sasl_conn_t *conn,
			    const char *input, unsigned inputlen,
			    const char **output, unsigned *outputlen);
LIBSASL_API int sasl_encodev(sasl_conn_t *conn,
			     const struct iovec *invec, unsigned numiov,
			     const char **output, unsigned *outputlen);
LIBSASL_API int sasl_decode(sasl_conn_t *conn,
			    const char *input, unsigned inputlen,
			    const char **output, unsigned *outputlen);